--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
