--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@videojs/themes": "^1.0.1",
     "axios": "^0.26.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
@@ -15,6 +16,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
+    "video.js": "^7.17.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
