--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
+    "react-select": "^5.2.2",
     "styled-components": "^5.3.3",
     "video.js": "^7.17.0",
     "web-vitals": "^1.0.1"
