--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "react-select": "^5.2.2",
     "styled-components": "^5.3.3",
     "video.js": "^7.17.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "zuck.js": "^1.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
