--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-insta-stories": "^2.3.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "react-select": "^5.2.2",
